--- a/src/components/aboutComponent/about.css
+++ b/src/components/aboutComponent/about.css
@@ -15,10 +15,11 @@
 
 .about__me-image {
   border-radius: 2rem;
-  width: 23rem;
+  width: 20rem;
   overflow: hidden;
   transform: rotate(10deg);
   transition: var(--transition);
+  margin-left: 0;
 }
 
 .about__me-image:hover {
